k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: omega-pnj
  labels:
    app: omega-pnj
    environment: production
